<resources>
    <string name="app_name">IntelliFitn</string>

    <string name="action_settings">Opções</string>
    <string name="action_cadastro">Cadastrar</string>
    <string name="title_activity_cons_dieta">Minha Dieta</string>
    <string name="title_activity_cons_treino">Meu Treino</string>
    <string name="title_activity_cad_treino">Novo Treino</string>
    <string name="title_activity_cad_dieta">Nova Dieta</string>
    <string name="title_activity_treino_exercicio">Novo Exercício</string>
    <string name="search_label">Exercício</string>
    <string name="search_hint">Pesquisar Exercício</string>
    <string name="day_monday">"Segunda"</string>
    <string name="day_tuesday">"Terça"</string>
    <string name="day_wednesday">"Quarta"</string>
    <string name="day_thursday">"Quinta"</string>
    <string name="day_friday">"Sexta"</string>
    <string name="day_saturday">"Sábado"</string>
    <string name="day_sunday">"Domingo"</string>
    <string name="rb_repeticao">"Repetições"</string>
    <string name="rb_tempo">"Tempo"</string>
    <string name="rb_solido">"Sólido"</string>
    <string name="rb_liquido">"Líquido"</string>
    <string name="ed_series">"Séries"</string>
    <string name="ed_alimento">"Alimento"</string>
    <string name="ed_hora">"Hora"</string>
    <string name="hint_activity_treino">Nenhum treino cadastrado, clique no botão "+" para cadastrar.</string>
    <string name="hint_activity_dieta">Nenhuma dieta cadastrada, clique no botão "+" para cadastrar.</string>
    <string name="title_activity_dieta_cad_acitivity">Cadastro de Dieta</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_dieta_alimento">Alimento</string>
    <string name="title_activity_dieta">Minha Dieta</string>
</resources>
