<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.prjvt.intellifitn.fragments.ExercicioBuscaFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_busca"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <SearchView
            android:actionViewClass="android.widget.SearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sv_exercicio"/>
            <!--android:queryHint="@string/search_hint" />-->

    </android.support.v7.widget.CardView>

    <ListView
        android:layout_below="@id/cv_busca"
        android:layout_width="fill_parent"
        android:id="@+id/lv_search_exercicio"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        />

    <Space
        android:layout_below="@id/lv_search_exercicio"
        android:id="@+id/sp_busca_top"
        android:layout_width="10dp"
        android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_exercicio"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp_busca_top"
        card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_grupomusc"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/tv_descr_exerc"
                    android:layout_toRightOf="@id/iv_grupomusc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="13dp"
                    android:textSize="16sp"
                    android:alpha="0.6"
                    android:text=""/>

                <Spinner
                    android:id="@+id/spn_dias"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_descr_exerc"
                    />

                <RadioGroup
                    android:id="@+id/rg_tipoexercicio"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spn_dias">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_repeticao"
                        android:checked="true"
                        android:id="@+id/rb_repeticao"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_tempo"
                        android:alpha="0.6"
                        android:id="@+id/rb_tempo"
                        />

                </RadioGroup>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_below="@id/rg_tipoexercicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/ftedit_series">

                    <EditText
                        android:hint="@string/ed_series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/ed_series"
                        android:textSize="14sp"
                        android:maxLength="2" />

                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:id="@+id/ftedit_exercicio"
                    android:layout_below="@id/ftedit_series"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:hint="@string/rb_repeticao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/ed_repeticao"
                        android:textSize="14sp"
                        android:maxLength="2" />

                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <ImageButton
                    android:id="@+id/bt_cancela"
                    android:layout_below="@id/ftedit_exercicio"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_cancel"
                    android:background="@drawable/ic_cancel"
                    android:alpha="0.5"
                    android:clickable="true"
                    android:focusable="true"/>

                <ImageButton
                    android:id="@+id/bt_confirma"
                    android:layout_below="@id/ftedit_exercicio"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action"
                    android:background="@drawable/ic_action"
                    android:alpha="0.5"
                    android:clickable="true"
                    android:focusable="true"/>
            </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/rv_list"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->
</LinearLayout>
